package com.main.dhbworld.Firebase;

public interface CurrentStatusListener {
    void onStatusReceived(String category, int status);
}
