package com.main.dhbworld.Firebase;

public interface DataSendListener {
    void success();
    void failed(Exception reason);
}
