package com.main.dhbworld.Firebase;

public interface ReportCountListener {
    void onReportCountReceived(String category, long reportCount);
}
